# met-cu

./: .gitignore  BENCHMARK_REPORT.txt  README.md  REVIEW.md  generate_report.py  pyproject.toml
python/metcu/: __init__.py  backend.py  calc.py  constants.py  fused.py  gpu_ops.py  graph.py  ptx_runtime.py  utils.py
python/metcu/kernels/: __init__.py  grid.py  thermo.py  wind.py
python/metcu/metal/: __init__.py  grid.py  msl_helpers.py  runtime.py  thermo.py  utils.py  wind.py
python/metcu/mpl/: __init__.py  compat.py  gpu_render.py  met_plots.py
python/metcu/ptx/: coriolis_parameter_kernel.ptx  divergence_kernel.ptx  gradient_kernel.ptx  laplacian_kernel.ptx  vorticity_kernel.ptx  wind_components_kernel.ptx  wind_direction_kernel.ptx
tests/: _metpy_conformance.py  bench_graphs.py  benchmark_complete.py  benchmark_gpu_vs_cpu.py  benchmark_hrrr_full.py  benchmark_metpy_subset.py  benchmark_results.txt  benchmark_three_way.py  demo_full_severe.py  demo_real_hrrr.py  demo_realistic_site.py  test_against_metpy_core.py  test_against_metpy_extended.py  test_against_metrust.py  test_fused.py  test_wrapper_parity.py  verify_cape.py  verify_grid.py  verify_indices.py  verify_metal.py  verify_severe.py  verify_soundings.py  verify_thermo.py  verify_wind.py
