[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "met-cu"
version = "0.2.0"
description = "Custom CUDA kernels for every meteorological calculation. GPU-accelerated MetPy/metrust."
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["cuda", "gpu", "meteorology", "weather", "cupy"]
dependencies = [
    "numpy>=1.20",
    "cupy-cuda12x>=13.0",
]

[project.optional-dependencies]
plot = [
    "matplotlib>=3.10",
    "cartopy>=0.25",
    "Pillow>=10.0",
]
cpu = ["metrust>=0.3.8"]
test = [
    "metrust>=0.3.8",
    "pytest",
    "matplotlib>=3.10",
    "cartopy>=0.25",
    "Pillow>=10.0",
]

[tool.setuptools.packages.find]
where = ["python"]
